# $Id$

2006-09-21	Konstantin V. Arkhipov

	* main/DAOs/Handlers/XCacheSegmentHandler.class.php: one more
	segment handler added.

2006-09-20	Denis M. Gabaidulin

	* core/Base/Session.class.php: dropAll() method was added.

2006-09-19	Konstantin V. Arkhipov

	* main/Base/ObjectsTree.class.php, main/DAOs/ObjectsTreeDAO.class.php,
	main/DAOs/FinalObjectsTreeDAO.class.php: are now deprecated, pending
	removal during upcoming 0.7-session.

	* meta/builders/DictionaryDaoBuilder.class.php: now detects whether
	FinalNamedObjectDAO can be used.

2006-09-18	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: name in identifier's
	shortcut is now optional, the default is 'id'; identifier's type can
	be specified now, the default is 'BigInteger'.

2006-09-17	Konstantin V. Arkhipov

	* 0.6.2 released.

2006-09-14	Konstantin V. Arkhipov

	* core/OSQL/SelectQuery.class.php: arrayGet() now detects two
	DialectString childs in should-be-prefixed cases, as requested by
	Sherman.

2006-09-10	Konstantin V. Arkhipov

	* main/Flow/RedirectToView.class.php: {get,set}Suffix added.

2006-09-08	Dmitry E. Demidov

	* main/Utils/TuringTest/CodeGenerator.class.php: added restriction
	generation of similar symbols ability.

2006-09-07	Dmitry E. Demidov

	* core/Form/Form.class.php: addCustomLabel() added.

2006-08-23	Konstantin V. Arkhipov

	* core/Cache/PeclMemcached.class.php: corrected behaviour in cases
	when memcached's gone.

2006-08-22	Dmitry E. Demidov

	* main/Utils/HttpStatus.class.php: added enumeration of http status
	codes.

	* main/Utils/HeaderUtils.class.php: changed method sendHttpStatus to
	use introduced enumeration..

2006-08-21	Dmitry E. Demidov

	* main/Utils/HeaderUtils.class.php: added method sendHttpStatus.

2006-08-18	Konstantin V. Arkhipov

	* main/Containers/Storable/StorableContainer.class.php: fixed issue
	with lost keys in getIdsList(). Spotted by serge, approved by antony.

2006-08-15	Dmitry E. Demidov
